apps/home-assistant/core/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hass.chalk-ho.me
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: hass.chalk-ho.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ha-tailscale
                port:
                  name: ha
  tls:
    - hosts:
        - hass.chalk-ho.me
      secretName: ha-tls
